--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -50,6 +50,7 @@
      <Compile Include="Assets\GameMessagePopup.cs" />
      <Compile Include="Assets\Lever.cs" />
      <Compile Include="Assets\LeverManager.cs" />
+     <Compile Include="Assets\Player2.cs" />
      <Compile Include="Assets\Scripts\ActionButton.cs" />
      <Compile Include="Assets\Scripts\ActiveStateToggler.cs" />
      <Compile Include="Assets\Scripts\ApplicationManager.cs" />
